# practice2026

./: .gitignore  6_25_repo.cpp  CMakeLists.txt  README.md  Thumbs.db  barbara.ppm  bitstream.hpp  coding.hpp  cvtest.cpp  cvtest_6_25_copy.cpp  cvtest_hozonyou.cpp  jiguzagu.hpp  jpgheaders.cpp  jpgheaders.hpp  output.csv  qtable.hpp  repo7_2.cpp  sankou.cpp  sip.hpp  ycctype.hpp  zigzag.hpp  グラフ.xlsx  第5回課題_G6M217_谷島悠仁.txt
